--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -577,6 +577,7 @@ html, body {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.min.js"></script>
 <!-- biblioteca qr -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
+<script src="js/config.js"></script>
 <script src="js/super-simple-cache.js"></script>
 <script src="js/toasts.js"></script>
 <script src="js/core.js"></script>
