--- a/FrontEnd/admin-panel.html
+++ b/FrontEnd/admin-panel.html
@@ -770,10 +770,11 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
-    
+    <script src="js/config.js"></script>
+
     <script>
         // Constantes
-        const apiBaseUrl = "https://api.rafarearte.com/api";
+        const apiBaseUrl = CONFIG.API.BASE_URL;
         let eventsDataTable, usersDataTable;
 
         // Funciones de utilidad
