--- a/FrontEnd/event-selection.html
+++ b/FrontEnd/event-selection.html
@@ -133,11 +133,11 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="js/config.js"></script>
 
 <script>
     // Constante para la URL base de la API
-    const apiBaseUrl = "https://api.rafarearte.com/api";
+    const apiBaseUrl = CONFIG.API.BASE_URL;
     
     // Variable para almacenar información del usuario
     let userData = null;
