--- a/FrontEnd/feedback.html
+++ b/FrontEnd/feedback.html
@@ -234,12 +234,13 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/toasts.js"></script>
-    
+    <script src="js/config.js"></script>
+
     <script>
         // Variables globales
         let currentEventId = null;
         let currentEventName = '';
-        const apiUrl = 'https://api.rafarearte.com/api';
+        const apiUrl = CONFIG.API.BASE_URL;
 
         // Cargar información del evento al iniciar
         document.addEventListener('DOMContentLoaded', async function() {
