--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -94,18 +94,19 @@
     </form>
 </div>
 
+    <script src="js/config.js"></script>
     <script>
         async function doLogin() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
-            
+
             if (!username || !password) {
                 document.getElementById('errorMessage').textContent = 'Por favor complete todos los campos';
                 return;
             }
-            
+
             try {
-                const response = await fetch('https://api.rafarearte.com/api/auth/login', {
+                const response = await fetch(`${CONFIG.API.BASE_URL}/auth/login`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
