--- a/FrontEnd/print-labels.html
+++ b/FrontEnd/print-labels.html
@@ -193,11 +193,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- QR Code Library -->
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
-    
+    <script src="js/config.js"></script>
+
     <script>
         // URLs para las APIs
-        const apiUrl = "https://api.rafarearte.com/api/List";
-        const eventApiUrl = "https://api.rafarearte.com/api/Event";
+        const apiUrl = CONFIG.API.LIST;
+        const eventApiUrl = CONFIG.API.EVENT;
         
         // Variables globales
         let events = [];
