--- a/FrontEnd/registro/registro-publico.html
+++ b/FrontEnd/registro/registro-publico.html
@@ -254,9 +254,10 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="../js/config.js"></script>
+
     <script>
-        const apiUrl = 'https://api.rafarearte.com/api';
+        const apiUrl = CONFIG.API.BASE_URL;
         let selectedEvent = null;
 
         // Cargar eventos al inicializar
