--- a/FrontEnd/stats.html
+++ b/FrontEnd/stats.html
@@ -246,14 +246,15 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/config.js"></script>
 
     <script>
         // Variable global para los gráficos
         let statusPieChart, hourlyBarChart, dayAttendanceChart, newRegistrationsChart;
         let eventData = null; // Para almacenar la configuración del evento actual
 
-        const apiUrl = "https://api.rafarearte.com/api/List";
-        const eventApiUrl = "https://api.rafarearte.com/api/Event";
+        const apiUrl = CONFIG.API.LIST;
+        const eventApiUrl = CONFIG.API.EVENT;
 
         // Verificar token y evento seleccionado al cargar la página
         document.addEventListener('DOMContentLoaded', function() {
