--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
-<html lang="es"
->
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Acreditación de Invitados</title>
+    <link rel="icon" href="./images/icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon.png">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css">
+    <!-- PrintJs CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.min.css">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#0d6efd">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Choosing">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="msapplication-TileColor" content="#0d6efd">
+    <meta name="msapplication-tap-highlight" content="no">
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json">
+    <!-- PWA Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon-180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/icon.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/images/icon-512.png">
 
 <style>
+    body {
+        background: linear-gradient(135deg, #f5f7fa 0%, #e4e9f2 100%);
+    }
+
+    .navbar {
+        background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%) !important;
+        box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+        border-bottom: none !important;
+        padding: 1rem 0;
+    }
+
+    .navbar .navbar-brand {
+        color: white !important;
+        font-weight: 700;
+        font-size: 1.4rem;
+    }
+
+    .navbar .btn {
+        border-radius: 10px;
+        font-weight: 600;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+        transition: all 0.3s ease;
+    }
+
+    .navbar .btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+    }
+
     #invitadosList {
-        padding: 15px;
+        padding: 20px;
         overflow-x: auto;
-        border: 1px solid #b4b4b4;
-        border-radius: 8px;
+        background: white;
+        border-radius: 15px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        border: none;
     }
 
     #invitadosTable {
@@ -17,8 +75,16 @@
 
     /* Estilos para los botones */
     #invitadosTable .btn {
-        padding: 0.20rem 0.3rem;
-        font-size: 0.8rem;
+        padding: 0.35rem 0.6rem;
+        font-size: 0.85rem;
+        border-radius: 8px;
+        font-weight: 600;
+        transition: all 0.3s ease;
+    }
+
+    #invitadosTable .btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
     /* Ajuste específico para columnas con posible desbordamiento */
@@ -41,17 +107,23 @@
     /* Estilo para los contadores como botones */
     .counter-badge {
         cursor: pointer;
-        transition: all 0.3s;
+        transition: all 0.3s ease;
+        padding: 10px 20px !important;
+        font-size: 0.95rem !important;
+        font-weight: 700;
+        border-radius: 12px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.15);
     }
 
     .counter-badge:hover {
-        opacity: 0.8;
-        transform: scale(1.05);
+        transform: translateY(-3px) scale(1.05);
+        box-shadow: 0 6px 20px rgba(0,0,0,0.25);
     }
 
     /* Estilo para el contador activo */
     .counter-badge.active {
-        box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.5);
+        box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.6);
+        transform: scale(1.08);
     }
 
     /* Indicador de carga */
@@ -111,7 +183,21 @@ table.dataTable {
 }
 
 table.dataTable thead th {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 2px solid #2a5298;
+    background: linear-gradient(135deg, #f6f8fb 0%, #e9ecf5 100%);
+    color: #2d3748;
+    font-weight: 700;
+    padding: 15px 10px;
+}
+
+table.dataTable tbody tr {
+    transition: all 0.3s ease;
+}
+
+table.dataTable tbody tr:hover {
+    background: #f7fafc;
+    transform: scale(1.01);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.08);
 }
 
 table.dataTable.no-footer {
@@ -155,57 +241,69 @@ html, body {
     margin: 0 auto;
 }
 
+/* CSS para animaciones PWA */
+@keyframes slideUp {
+  from { transform: translateY(0); }
+  to { transform: translateY(-100%); }
+}
 
+.pwa-enabled {
+  position: relative;
+}
 
+.pwa-installed {
+  --pwa-installed: true;
+}
+
+/* Ocultar elementos en modo app */
+@media (display-mode: standalone) {
+  .hide-when-pwa {
+    display: none !important;
+  }
+
+  .navbar {
+    padding-top: env(safe-area-inset-top, 0);
+  }
+}
+
+/* Responsive para móvil */
+@media (max-width: 576px) {
+  #pwa-install-banner .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  #pwa-install-banner .container > div:last-child {
+    margin-top: 10px;
+  }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 </style>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acreditación de Invitados</title>
-    <link rel="icon" href="./images/icon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon.png">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- DataTables CSS -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css">
-    <!-- PrintJs CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.min.css">
-    <!-- PWA Meta Tags -->
-<meta name="theme-color" content="#0d6efd">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="Choosing">
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="msapplication-TileColor" content="#0d6efd">
-<meta name="msapplication-tap-highlight" content="no">
-
-<!-- PWA Manifest -->
-<link rel="manifest" href="/manifest.json">
-
-<!-- PWA Icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/images/icon-180.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/images/icon.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/images/icon-512.png">
 </head>
 <body>
-    <nav class="navbar" style="background-color: #f8f9fa;border-bottom: 1px solid #e0e0e0;">
+    <nav class="navbar">
         <div class="container">
             <div class="d-flex align-items-center">
-                <a class="navbar-brand" href="#">Acreditación de Invitados</a>
+                <a class="navbar-brand" href="#">
+                    <span style="font-size: 1.8rem;">🎯</span> Choosing - Acreditación
+                </a>
             </div>
             <div class="my-3">
-                <span id="totalGuests" class="badge bg-primary counter-badge" data-endpoint="GetAll">Invitados: 0</span>
-                <span id="notAccredited" class="badge bg-danger counter-badge" data-endpoint="GetNoAcreditados">No acreditados: 0</span>
-                <span id="accredited" class="badge bg-success counter-badge" data-endpoint="GetAcreditados">Acreditados: 0</span>
-                <span id="new" class="badge bg-info counter-badge" data-endpoint="GetNuevos">Nuevos: 0</span>
+                <span id="totalGuests" class="badge bg-light text-dark counter-badge" data-endpoint="GetAll">👥 Invitados: 0</span>
+                <span id="notAccredited" class="badge bg-danger counter-badge" data-endpoint="GetNoAcreditados">⏳ Sin acreditar: 0</span>
+                <span id="accredited" class="badge bg-success counter-badge" data-endpoint="GetAcreditados">✅ Acreditados: 0</span>
+                <span id="new" class="badge bg-info counter-badge" data-endpoint="GetNuevos">🆕 Nuevos: 0</span>
             </div>
             <div class="d-flex">
                 <!-- Botón de escaneo en la navbar -->
-                <button type="button" class="btn btn-warning me-2 d-flex align-items-center justify-content-center" id="scanModeBtn">
+                <button type="button" class="btn btn-light text-dark me-2 d-flex align-items-center justify-content-center" id="scanModeBtn" style="font-weight: 600;">
                     <i class="bi bi-upc-scan me-2"></i> Escanear
                 </button>
-                <button type="button" class="btn btn-primary me-2 d-flex align-items-center justify-content-center open-add-guest-btn" data-bs-toggle="modal" data-bs-target="#addGuestModal">
+                <button type="button" class="btn btn-light text-dark me-2 d-flex align-items-center justify-content-center open-add-guest-btn" data-bs-toggle="modal" data-bs-target="#addGuestModal" style="font-weight: 600;">
                     <i class="bi bi-person-plus me-2"></i> Nuevo Invitado
                 </button>
             </div>
@@ -564,9 +662,6 @@ html, body {
     </div>
 </div>
 
-<!-- Agregar Bootstrap Icons para los iconos de edición -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- DataTables JS -->
@@ -589,14 +684,6 @@ html, body {
 <script src="js/print.js"></script>
 <script src="js/main.js"></script>
 <script src="js/pwa.js"></script>
-
-<script>
-</script>
-
-<!--
-<script src="scriptindex.js"></script>
--->
-
 
 <!-- LOADING SIMPLE - UN SOLO CARTEL AL MEDIO -->
 <div id="loadingOverlay" style="
