--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -23,74 +23,211 @@
 <link rel="icon" type="image/png" sizes="192x192" href="/images/icon.png">
 <link rel="icon" type="image/png" sizes="512x512" href="/images/icon-512.png">
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f5f5f5;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #7e8ba3 100%);
+            position: relative;
+            overflow: hidden;
         }
+
+        /* Animación de fondo con círculos */
+        body::before {
+            content: '';
+            position: absolute;
+            width: 500px;
+            height: 500px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            top: -250px;
+            right: -250px;
+            animation: float 6s ease-in-out infinite;
+        }
+
+        body::after {
+            content: '';
+            position: absolute;
+            width: 400px;
+            height: 400px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            bottom: -200px;
+            left: -200px;
+            animation: float 8s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
+        }
+
         .login-container {
-            background: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            width: 300px;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            width: 380px;
+            position: relative;
+            z-index: 10;
+            animation: slideDown 0.6s ease-out;
         }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .logo-container {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .logo-icon {
+            width: 80px;
+            height: 80px;
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            border-radius: 20px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 40px;
+            color: white;
+            margin-bottom: 15px;
+            box-shadow: 0 10px 25px rgba(42, 82, 152, 0.4);
+        }
+
         h2 {
             text-align: center;
             color: #333;
+            font-size: 28px;
+            margin-bottom: 10px;
+            font-weight: 600;
         }
+
+        .subtitle {
+            text-align: center;
+            color: #666;
+            font-size: 14px;
+            margin-bottom: 30px;
+        }
+
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+            position: relative;
         }
+
         label {
             display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
+            margin-bottom: 8px;
+            font-weight: 600;
+            color: #555;
+            font-size: 14px;
         }
+
         input[type="text"], input[type="password"] {
             width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+            padding: 14px 20px;
+            border: 2px solid #e0e0e0;
+            border-radius: 12px;
+            font-size: 15px;
+            transition: all 0.3s ease;
+            background: #f8f9fa;
         }
+
+        input[type="text"]:focus, input[type="password"]:focus {
+            outline: none;
+            border-color: #2a5298;
+            background: white;
+            box-shadow: 0 0 0 4px rgba(42, 82, 152, 0.15);
+            transform: translateY(-2px);
+        }
+
         button {
             width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
+            padding: 14px;
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 12px;
             cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .error-message {
-            color: red;
+            font-size: 16px;
+            font-weight: 600;
+            transition: all 0.3s ease;
             margin-top: 10px;
+            box-shadow: 0 8px 20px rgba(42, 82, 152, 0.35);
+        }
+
+        button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 12px 30px rgba(42, 82, 152, 0.5);
+            background: linear-gradient(135deg, #2a5298 0%, #1e3c72 100%);
+        }
+
+        button:active {
+            transform: translateY(0);
+        }
+
+        .error-message {
+            color: #e74c3c;
+            background: #ffe5e5;
+            padding: 12px;
+            border-radius: 8px;
             text-align: center;
+            margin-bottom: 20px;
+            font-size: 14px;
+            border-left: 4px solid #e74c3c;
+            animation: shake 0.5s ease;
+        }
+
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-10px); }
+            75% { transform: translateX(10px); }
+        }
+
+        /* Responsive */
+        @media (max-width: 480px) {
+            .login-container {
+                width: 90%;
+                padding: 30px 25px;
+            }
         }
     </style>
 </head>
 <body>
 <div class="login-container">
-    <h2>Iniciar Sesión</h2>
-    <div id="errorMessage" class="error-message"></div>
-    <form id="loginForm">  <!-- 🔥 AGREGAR FORM -->
+    <div class="logo-container">
+        <div class="logo-icon">🎯</div>
+    </div>
+    <h2>Choosing</h2>
+    <p class="subtitle">Sistema de Acreditación de Eventos</p>
+    <div id="errorMessage" class="error-message" style="display: none;"></div>
+    <form id="loginForm">
         <div class="form-group">
-            <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" required>
+            <label for="username">Usuario</label>
+            <input type="text" id="username" name="username" required placeholder="Ingrese su usuario">
         </div>
         <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" name="password" required placeholder="Ingrese su contraseña">
         </div>
-        <button type="submit" id="loginButton">Ingresar</button>  <!-- 🔥 TYPE SUBMIT -->
+        <button type="submit" id="loginButton">Iniciar Sesión</button>
     </form>
 </div>
 
@@ -101,7 +238,9 @@
             const password = document.getElementById('password').value;
 
             if (!username || !password) {
-                document.getElementById('errorMessage').textContent = 'Por favor complete todos los campos';
+                const errorMsg = document.getElementById('errorMessage');
+                errorMsg.textContent = 'Por favor complete todos los campos';
+                errorMsg.style.display = 'block';
                 return;
             }
 
@@ -129,16 +268,19 @@
                     window.location.href = 'event-selection.html';
                 } 
                 if (response.status === 401) {
-                    document.getElementById('errorMessage').textContent = 'Usuario o contraseña incorrectos';
-
+                    const errorMsg = document.getElementById('errorMessage');
+                    errorMsg.textContent = 'Usuario o contraseña incorrectos';
+                    errorMsg.style.display = 'block';
                 } else {
                     const errorData = await response.json();
-                    document.getElementById('errorMessage').textContent = 
-                        errorData.message || 'Error de conexion';
+                    const errorMsg = document.getElementById('errorMessage');
+                    errorMsg.textContent = errorData.message || 'Error de conexión';
+                    errorMsg.style.display = 'block';
                 }
             } catch (error) {
-                document.getElementById('errorMessage').textContent = 
-                    'Error de conexion';
+                const errorMsg = document.getElementById('errorMessage');
+                errorMsg.textContent = 'Error de conexión';
+                errorMsg.style.display = 'block';
                 console.error('Error:', error);
             }
         
