--- a/FrontEnd/event-selection.html
+++ b/FrontEnd/event-selection.html
@@ -334,7 +334,7 @@
                         <span class="me-2">Invitados:</span>
                         <span class="badge bg-primary">${stats.totalInvitados}</span>
                         <span class="ms-2 me-1">Acreditados:</span>
-                        <span class="badge bg-success">${stats.acreditados}</span>
+                        <span class="badge bg-success">${stats.estaAcreditados}</span>
                     </div>
                     ${event.activo ? 
                         '<span class="badge bg-success event-badge">Activo</span>' : 
