--- a/FrontEnd/landing.html
+++ b/FrontEnd/landing.html
@@ -740,6 +740,9 @@
                     <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
                     <li class="nav-item ms-3">
+                        <a href="/eventos-publicos.html" class="btn btn-outline-primary me-2">🎫 Ver Eventos</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="login.html" class="btn btn-cta">Iniciar Sesión</a>
                     </li>
                 </ul>
@@ -756,11 +759,11 @@
                     <p class="lead">Acreditación instantánea con códigos QR. Gestiona miles de participantes en segundos y obtén control total en tiempo real.</p>
 
                     <div class="d-flex gap-3 flex-wrap">
-                        <a href="#contacto" class="btn btn-light btn-lg px-4 py-3">
-                            <i class="bi bi-rocket-takeoff me-2"></i>Empezar ahora
+                        <a href="/eventos-publicos.html" class="btn btn-light btn-lg px-4 py-3">
+                            <i class="bi bi-ticket-perforated me-2"></i>Ver Eventos Disponibles
                         </a>
-                        <a href="#que-es" class="btn btn-outline-light btn-lg px-4 py-3">
-                            <i class="bi bi-play-circle me-2"></i>Ver cómo funciona
+                        <a href="#contacto" class="btn btn-outline-light btn-lg px-4 py-3">
+                            <i class="bi bi-rocket-takeoff me-2"></i>Empezar ahora
                         </a>
                     </div>
 
