--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -229,9 +229,17 @@
         </div>
         <button type="submit" id="loginButton">Iniciar Sesión</button>
     </form>
+
+    <div style="text-align: center; margin-top: 20px; padding-top: 20px; border-top: 1px solid #e0e0e0;">
+        <p style="color: #666; font-size: 14px; margin-bottom: 10px;">¿No tienes cuenta?</p>
+        <a href="/sing-up.html" style="color: #2a5298; text-decoration: none; font-weight: 600; font-size: 15px;">
+            Crear cuenta gratis →
+        </a>
+    </div>
 </div>
 
     <script src="js/config.js"></script>
+    <script src="js/auth.js"></script>
     <script>
         async function doLogin() {
             const username = document.getElementById('username').value;
@@ -258,16 +266,11 @@
                 
                 if (response.ok) {
                     const data = await response.json();
-                    // Guardar el token en localStorage
-                    localStorage.setItem('authToken', data.token);
-                    localStorage.setItem('userData', JSON.stringify({
-            id: data.user.id,
-            name: data.user.name
-        }));
-                    // Redirigir al index
-                    window.location.href = 'event-selection.html';
-                } 
-                if (response.status === 401) {
+                    // Usar Auth.js para guardar token y usuario
+                    Auth.login(data.token, data.user);
+                    // Redirigir según rol
+                    Auth.redirectByRole();
+                } else if (response.status === 401) {
                     const errorMsg = document.getElementById('errorMessage');
                     errorMsg.textContent = 'Usuario o contraseña incorrectos';
                     errorMsg.style.display = 'block';
