--- a/FrontEnd/eventos-publicos.html
+++ b/FrontEnd/eventos-publicos.html
@@ -5,51 +5,184 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eventos - Choosing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <style>
+        :root {
+            --primary: #1e3c72;
+            --secondary: #2a5298;
+        }
+
         body {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 60%, #7e8ba3 100%);
             min-height: 100vh;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
+
         .navbar {
-            background: white !important;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            background: rgba(255, 255, 255, 0.98) !important;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 2px 20px rgba(0,0,0,0.08);
+            padding: 1rem 0;
         }
+
+        .navbar-brand {
+            font-size: 1.5rem;
+            font-weight: 800;
+            color: var(--primary) !important;
+        }
+
+        .page-header {
+            padding: 3rem 0 2rem;
+            text-align: center;
+            color: white;
+        }
+
+        .page-header h1 {
+            font-size: 3rem;
+            font-weight: 800;
+            margin-bottom: 1rem;
+        }
+
+        .page-header p {
+            font-size: 1.2rem;
+            opacity: 0.95;
+        }
+
+        .search-box {
+            background: white;
+            border-radius: 50px;
+            padding: 0.5rem 1.5rem;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+            border: none;
+            font-size: 1.1rem;
+        }
+
+        .search-box:focus {
+            outline: none;
+            box-shadow: 0 8px 30px rgba(0,0,0,0.25);
+        }
+
         .event-card {
             border: none;
-            border-radius: 15px;
+            border-radius: 20px;
             overflow: hidden;
-            transition: transform 0.3s, box-shadow 0.3s;
+            transition: all 0.3s ease;
             cursor: pointer;
             height: 100%;
+            background: white;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
+
         .event-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.2);
         }
+
         .event-image {
-            height: 200px;
+            height: 220px;
             object-fit: cover;
             width: 100%;
-            background: linear-gradient(45deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 4rem;
         }
+
+        .event-body {
+            padding: 1.5rem;
+        }
+
+        .event-title {
+            font-size: 1.4rem;
+            font-weight: 700;
+            color: var(--primary);
+            margin-bottom: 0.8rem;
+        }
+
+        .event-description {
+            color: #666;
+            margin-bottom: 1rem;
+            font-size: 0.95rem;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+
+        .event-info {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .event-info-item {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: #555;
+            font-size: 0.9rem;
+        }
+
+        .event-info-item i {
+            color: var(--secondary);
+            width: 20px;
+        }
+
         .event-price {
-            font-size: 24px;
-            font-weight: bold;
-            color: #667eea;
+            font-size: 2rem;
+            font-weight: 800;
+            color: var(--primary);
+            margin-bottom: 1rem;
         }
-        .event-date {
-            background: #667eea;
+
+        .event-date-badge {
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
             color: white;
-            padding: 5px 15px;
-            border-radius: 20px;
-            font-size: 14px;
+            padding: 8px 16px;
+            border-radius: 25px;
+            font-size: 0.85rem;
+            font-weight: 600;
             display: inline-block;
         }
+
+        .btn-comprar {
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+            color: white;
+            border: none;
+            padding: 12px 30px;
+            border-radius: 25px;
+            font-weight: 600;
+            transition: all 0.3s;
+            width: 100%;
+        }
+
+        .btn-comprar:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(30, 60, 114, 0.3);
+            color: white;
+        }
+
         .loading {
             text-align: center;
-            padding: 50px;
+            padding: 4rem;
             color: white;
-            font-size: 20px;
+            font-size: 1.3rem;
+        }
+
+        .no-events {
+            text-align: center;
+            padding: 4rem 2rem;
+            background: white;
+            border-radius: 20px;
+            margin-top: 2rem;
+        }
+
+        .no-events i {
+            font-size: 4rem;
+            color: var(--secondary);
+            margin-bottom: 1rem;
         }
     </style>
 </head>
@@ -57,23 +190,26 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="/landing.html">🎪 Choosing</a>
+            <a class="navbar-brand" href="/landing.html">
+                <i class="bi bi-star-fill me-2"></i>Choosing
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/eventos-publicos.html">Eventos</a>
+                        <a class="nav-link active fw-semibold" href="/eventos-publicos.html">
+                            <i class="bi bi-calendar-event"></i> Eventos
+                        </a>
                     </li>
                     <li class="nav-item" id="navMisEntradas" style="display: none;">
-                        <a class="nav-link" href="/mis-entradas.html">Mis Entradas</a>
+                        <a class="nav-link" href="/mis-entradas.html">
+                            <i class="bi bi-ticket-detailed"></i> Mis Entradas
+                        </a>
                     </li>
-                    <li class="nav-item" id="navLogin">
-                        <a class="nav-link" href="/login.html">Iniciar Sesión</a>
-                    </li>
-                    <li class="nav-item" id="navLogout" style="display: none;">
-                        <a class="nav-link" href="#" onclick="logout()">Cerrar Sesión</a>
+                    <li class="nav-item" id="authButtons">
+                        <!-- Dinamically populated by JS -->
                     </li>
                 </ul>
             </div>
@@ -81,18 +217,18 @@
     </nav>
 
     <!-- Contenido Principal -->
-    <div class="container mt-5">
-        <div class="row mb-4">
-            <div class="col-12 text-center text-white">
-                <h1 class="display-4 fw-bold">Eventos Disponibles</h1>
-                <p class="lead">Encuentra el evento perfecto para ti</p>
-            </div>
+    <div class="page-header">
+        <div class="container">
+            <h1>🎭 Eventos Disponibles</h1>
+            <p>Encuentra el evento perfecto para ti</p>
         </div>
+    </div>
 
-        <!-- Filtros (básico por ahora) -->
-        <div class="row mb-4">
+    <div class="container pb-5">
+        <!-- Filtros -->
+        <div class="row mb-5">
             <div class="col-md-6 mx-auto">
-                <input type="text" class="form-control form-control-lg" id="searchInput" placeholder="🔍 Buscar eventos...">
+                <input type="text" class="form-control search-box" id="searchInput" placeholder="🔍 Buscar eventos por nombre...">
             </div>
         </div>
 
@@ -169,16 +305,26 @@
                 const card = `
                     <div class="col-md-4">
                         <div class="card event-card" onclick="verDetalle(${evento.id})">
-                            <div class="event-image"></div>
-                            <div class="card-body">
-                                <span class="event-date">${fechaFormateada}</span>
-                                <h5 class="card-title mt-3 fw-bold">${evento.nombre}</h5>
-                                <p class="card-text text-muted">${evento.descripcion || 'Sin descripción'}</p>
-                                <p class="mb-1">📍 ${evento.ubicacion || 'Ubicación por definir'}</p>
-                                <p class="mb-1">🎟️ ${disponibles} entradas disponibles</p>
+                            <div class="event-image">
+                                <i class="bi bi-calendar-event text-white"></i>
+                            </div>
+                            <div class="event-body">
+                                <span class="event-date-badge">${fechaFormateada}</span>
+                                <h5 class="event-title mt-3">${evento.nombre}</h5>
+                                <p class="event-description">${evento.descripcion || 'Sin descripción'}</p>
+                                <div class="event-info">
+                                    <div class="event-info-item">
+                                        <i class="bi bi-geo-alt-fill"></i>
+                                        <span>${evento.ubicacion || 'Ubicación por definir'}</span>
+                                    </div>
+                                    <div class="event-info-item">
+                                        <i class="bi bi-ticket-perforated-fill"></i>
+                                        <span>${disponibles} entradas disponibles</span>
+                                    </div>
+                                </div>
                                 <div class="d-flex justify-content-between align-items-center mt-3">
                                     <span class="event-price">${precioFormateado}</span>
-                                    <button class="btn btn-primary">Ver más →</button>
+                                    <button class="btn btn-comprar">Ver más</button>
                                 </div>
                             </div>
                         </div>
@@ -207,22 +353,65 @@
         // Logout
         function logout() {
             Auth.logout();
-            window.location.reload();
+            window.location.href = '/landing.html';
         }
 
         // Configurar navbar según autenticación
-        if (Auth.isAuthenticated()) {
-            const user = Auth.getUser();
-            document.getElementById('navLogin').style.display = 'none';
-            document.getElementById('navLogout').style.display = 'block';
+        document.addEventListener('DOMContentLoaded', function() {
+            const authButtonsContainer = document.getElementById('authButtons');
 
-            if (user.tipoUsuario === 'comprador') {
-                document.getElementById('navMisEntradas').style.display = 'block';
+            if (typeof Auth !== 'undefined' && Auth.isAuthenticated()) {
+                const user = Auth.getUser();
+                const userName = user.nombre || user.username || 'Usuario';
+                const tipoUsuario = user.tipoUsuario || 'usuario';
+
+                // Mostrar "Mis Entradas" si es comprador
+                if (tipoUsuario === 'comprador') {
+                    document.getElementById('navMisEntradas').style.display = 'block';
+                }
+
+                // Badge color según rol
+                let badgeClass = 'bg-secondary';
+                let dashboardUrl = '/landing.html';
+
+                if (tipoUsuario === 'admin') {
+                    badgeClass = 'bg-danger';
+                    dashboardUrl = '/admin-panel.html';
+                } else if (tipoUsuario === 'organizador') {
+                    badgeClass = 'bg-primary';
+                    dashboardUrl = '/organizador-dashboard.html';
+                } else if (tipoUsuario === 'comprador') {
+                    badgeClass = 'bg-success';
+                }
+
+                authButtonsContainer.innerHTML = `
+                    <div class="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i> ${userName}
+                            <span class="badge ${badgeClass} ms-1">${tipoUsuario}</span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="${dashboardUrl}">
+                                <i class="bi bi-speedometer2"></i> Dashboard
+                            </a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#" onclick="logout(); return false;">
+                                <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
+                            </a></li>
+                        </ul>
+                    </div>
+                `;
+            } else {
+                authButtonsContainer.innerHTML = `
+                    <a class="nav-link" href="/login.html">
+                        <i class="bi bi-box-arrow-in-right"></i> Iniciar Sesión
+                    </a>
+                `;
             }
-        }
 
-        // Cargar eventos
-        cargarEventos();
+            // Cargar eventos
+            cargarEventos();
+        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
