--- a/FrontEnd/landing.html
+++ b/FrontEnd/landing.html
@@ -742,8 +742,8 @@
                     <li class="nav-item ms-3">
                         <a href="/eventos-publicos.html" class="btn btn-outline-primary me-2">🎫 Ver Eventos</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="login.html" class="btn btn-cta">Iniciar Sesión</a>
+                    <li class="nav-item" id="authButtons">
+                        <!-- Se llena dinámicamente con JavaScript -->
                     </li>
                 </ul>
             </div>
@@ -1365,8 +1365,48 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AOS Animation -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- Auth -->
+    <script src="js/auth.js"></script>
 
     <script>
+        // Detectar si el usuario está logeado
+        document.addEventListener('DOMContentLoaded', function() {
+            const authButtonsContainer = document.getElementById('authButtons');
+
+            if (typeof Auth !== 'undefined' && Auth.isAuthenticated()) {
+                const user = Auth.getUser();
+                const userName = user.nombre || user.username || 'Usuario';
+                const userRole = user.tipoUsuario;
+
+                // Determinar dashboard según rol
+                let dashboardUrl = '/landing.html';
+                if (userRole === 'admin') dashboardUrl = '/admin-panel.html';
+                else if (userRole === 'organizador') dashboardUrl = '/organizador-dashboard.html';
+                else if (userRole === 'comprador') dashboardUrl = '/eventos-publicos.html';
+
+                authButtonsContainer.innerHTML = `
+                    <div class="dropdown">
+                        <button class="btn btn-cta dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                            <i class="bi bi-person-circle me-1"></i>${userName}
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="${dashboardUrl}">
+                                <i class="bi bi-speedometer2 me-2"></i>Mi Dashboard
+                            </a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#" onclick="Auth.logout(); return false;">
+                                <i class="bi bi-box-arrow-right me-2"></i>Cerrar Sesión
+                            </a></li>
+                        </ul>
+                    </div>
+                `;
+            } else {
+                authButtonsContainer.innerHTML = `
+                    <a href="login.html" class="btn btn-cta">Iniciar Sesión</a>
+                `;
+            }
+        });
+
         // Initialize AOS
         AOS.init({
             duration: 800,
